syntax = "proto3";

package inventory;

option go_package = "github.com/example/microservices/proto/inventory";

service InventoryService {
  rpc GetStock(GetStockRequest) returns (StockInfo);
  rpc UpdateStock(UpdateStockRequest) returns (StockInfo);
  rpc ReserveStock(ReserveRequest) returns (ReserveResponse);
  rpc ReleaseReservation(ReleaseRequest) returns (ReleaseResponse);
  rpc ConfirmReservation(ConfirmRequest) returns (ConfirmResponse);
  rpc WatchStock(WatchStockRequest) returns (stream StockUpdate);
}

message GetStockRequest {
  string product_id = 1;
}

message UpdateStockRequest {
  string product_id = 1;
  int32 quantity_change = 2;
  string reason = 3;
}

message StockInfo {
  string product_id = 1;
  int32 available = 2;
  int32 reserved = 3;
  int64 updated_at = 4;
}

message ReserveRequest {
  string product_id = 1;
  int32 quantity = 2;
  string order_id = 3;
  int64 expires_at = 4;
}

message ReserveResponse {
  bool success = 1;
  string reservation_id = 2;
  string error_message = 3;
}

message ReleaseRequest {
  string reservation_id = 1;
}

message ReleaseResponse {
  bool success = 1;
}

message ConfirmRequest {
  string reservation_id = 1;
}

message ConfirmResponse {
  bool success = 1;
}

message WatchStockRequest {
  repeated string product_ids = 1;
}

message StockUpdate {
  string product_id = 1;
  int32 available = 2;
  int32 reserved = 3;
  string change_type = 4;
  int64 timestamp = 5;
}
