syntax = "proto3";

package order;

option go_package = "github.com/example/microservices/proto/order";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc UpdateOrderStatus(UpdateStatusRequest) returns (Order);
  rpc CancelOrder(CancelOrderRequest) returns (Order);
  rpc ListOrders(ListOrdersRequest) returns (stream Order);
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);
}

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string shipping_address = 3;
}

message GetOrderRequest {
  string id = 1;
}

message UpdateStatusRequest {
  string id = 1;
  string status = 2;
}

message CancelOrderRequest {
  string id = 1;
  string reason = 2;
}

message ListOrdersRequest {
  string user_id = 1;
  string status = 2;
  int32 page_size = 3;
  string page_token = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  string status = 4;
  double total_amount = 5;
  string shipping_address = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message PaymentRequest {
  string order_id = 1;
  string payment_method = 2;
  string payment_token = 3;
}

message PaymentResponse {
  bool success = 1;
  string transaction_id = 2;
  string error_message = 3;
}
